components/history/history.style.css
#main-history, #main-history #slantedContainer,#history-buttonContainer {
	height:100%;
}

#main-history h5 {
	margin-bottom:0px;
}

#history-buttons span {
	color: #FFFFFF;
	font-size:12px;
}

#history-buttons button {
	min-width:100%;
	background-color: rgb(48,48,48);
	margin-left:0px;
	padding:7px;
}

#transaction p, #volunteer p  {
	font-size: 12px;
}

.content-history {
	background-color: transparent;
}

.content-history .md-3-line .md-list-item-text p, .content-history p {
	font-weight: bold;
	color:rgb(48,48,48);
}

.content-history md-list-item {
	min-height: 50px;
}

.content-history img {
	width:100%;
	height:100%;
}

